fix: #218: fix ticket popup jump when open accordio

--- a/src/components/globals/TicketsPopup/TicketsPopup.scss
+++ b/src/components/globals/TicketsPopup/TicketsPopup.scss
@@ -19,6 +19,12 @@
     color: $color-white;
     background-color: $color-green-dark;
 
+    &::-webkit-scrollbar {
+      display: none;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+
     @include tablet-xl {
       padding-right: 40px;
       padding-left: 40px;
